@@ -10,7 +10,7 @@
 .\" (at your option) any later version.
 .\"
 .\"
-.TH PS "1" "2023-08-31" "procps-ng" "User Commands"
+.TH PS "1" "2023-10-04" "procps-ng" "User Commands"
 .\"
 .\" Ragged-right text.
 .na
@@ -1274,6 +1274,9 @@ etimes	ELAPSED	T{
 elapsed time since the process was started, in seconds.
 T}
 
+environ ENVIRON T{
+environment variables for the process.
+T}
 euid	EUID	T{
 effective user ID (alias
 .BR uid ).
